Tue Sep 21 21:31:23 2004  Tim Janik  <timj@gtk.org>

	* sfidl-corec.cc (namespace): don't generate prototypes without 
	implementations.

Mon Sep 20 21:52:23 2004  Tim Janik  <timj@gtk.org>

	* sfidl-corecxx.cc: generate class definiiitions which may contain
	function bodies after all other types have been prototyped, declared
	and defined.

Mon Sep 20 01:12:01 2004  Tim Janik  <timj@gtk.org>

	* sfidl-corecxx.cc: added class_has_automation_properties().
	implemented code geenration for automated property handling.
	call set_accessors() from class_init() and supply trampolines
	for set_property(), get_property(), editable_property(),
	get_candidates() and property_updated().
	editable_property() and get_candidates() are virtual to allow
	custom implementations in effects.

Thu Sep 16 15:59:05 2004  Tim Janik  <timj@gtk.org>

	* sfidl-corecxx.cc: provide a IDType typedef in the synthesis module
	property structures for the property type IDs use by the implementing
	effect base object. provide an AutoUpdateCategory typedef in the
	efefct base object which aliases Synthesis:Module::NeedAutoUpdateTag
	for effects with :automate: properties.

Wed Sep 15 21:37:17 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-parser.cc: Fixes: printWarning/printError should never be
	called with a "\n", as this is added implicitely. When a warning is
	printed, the output now says so ("warning: ...").

Wed Sep 15 21:23:29 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-parser.h sfidl-parser.cc: Provide label, blurb and options of
	a pspec constructor in the Param struct. Also try to unescape and
	evaluate options to options_literal, a ready-to-use concatenated
	version of the string without \" and similar constructs. Throw a
	warning if this evaluation fails.

Tue Sep 14 19:10:07 2004  Tim Janik  <timj@gtk.org>

	* sfiparams.[hc]: const fixups.

Wed Sep  8 15:36:41 2004  Tim Janik  <timj@gtk.org>

	* glib-extra.[hc]: added g_intern_printf() to return a static printf-